--- a/about.html
+++ b/about.html
@@ -8,15 +8,18 @@
 </head>
 <body class="about">
 
-  <nav class="inner">
-    <ul>
-      <li><a href="index.html">CV</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="about.html">About Me</a></li>
-    </ul>
+  <nav>
+    <div class="inner">
+      <ul>
+        <li><a href="index.html">CV</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="about.html">About Me</a></li>
+      </ul>
+    </div>
   </nav>
 
   <div class="page">
+    
     <hr>
 
     <header>
