--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body class="cv">
 
-  <nav class="inner">
-    <ul>
-      <li><a href="index.html">CV</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="about.html">About Me</a></li>
-    </ul>
+  <nav>
+    <div class="inner">
+      <ul>
+        <li><a href="index.html">CV</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="about.html">About Me</a></li>
+      </ul>
+    </div>
   </nav>
 
   <div class="page">
