--- a/portfolio.html
+++ b/portfolio.html
@@ -8,16 +8,20 @@
 </head>
 <body class="portfolio">
 
-  <nav class="inner">
-    <ul>
-      <li><a href="index.html">CV</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="about.html">About Me</a></li>
-    </ul>
+  <nav>
+    <div class="inner">
+      <ul>
+        <li><a href="index.html">CV</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="about.html">About Me</a></li>
+      </ul>
+    </div>
   </nav>
-  <hr>
 
   <div class="page">
+
+    <hr>
+    
     <header>
       <h1>Portfolio</h1>
       <p>Selected projects and work samples.</p>
