--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Irina Metansina - About Me</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="about">
 
+<body class="about">
   <nav>
     <ul>
       <li><a href="index.html">CV</a></li>
@@ -17,13 +17,11 @@
   </nav>
 
   <div class="page">
-
-    <hr>
-
+    <div class="hline"></div>
     <header>
       <h1>About Me</h1>
     </header>
-
+    
     <section>
       <h2>Photo</h2>
       <img src="images/photo.jpg" alt="Photo of Irina Metansina" class="portrait">
@@ -31,12 +29,8 @@
 
     <section>
       <h2>Personal Bio</h2>
-      <p>
-        I am a certified IT Project Manager with over 10 years of experience leading complex software and infrastructure projects across international teams and industries. I specialize in full-cycle product development, digital transformation, and business process optimization. 
-      </p>
-      <p>
-        Outside of work, I am passionate about learning foreign languages and exploring the world. I enjoy trekking, skiing, and traveling—especially in the mountains and nature, where I find balance and inspiration.
-      </p>
+      <p>I am a certified IT Project Manager with over 10 years of experience leading complex software and infrastructure projects across international teams and industries. I specialize in full-cycle product development, digital transformation, and business process optimization.</p>
+      <p>Outside of work, I am passionate about learning foreign languages and exploring the world. I enjoy trekking, skiing, and traveling—especially in the mountains and nature, where I find balance and inspiration.</p>
     </section>
 
     <section>
